# ChangeLog for dev-libs/xalan-c
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/xalan-c/ChangeLog,v 1.31 2011/12/18 17:26:24 armin76 Exp $

  18 Dec 2011; Raúl Porcel <armin76@gentoo.org> xalan-c-1.10.0.ebuild,
  xalan-c-1.11.0_pre705082.ebuild, xalan-c-1.11.0_pre797991.ebuild,
  xalan-c-1.11.0_pre1153059.ebuild:
  Drop sparc keywords

  18 Sep 2011; Markus Meier <maekke@gentoo.org>
  xalan-c-1.11.0_pre1153059.ebuild:
  x86 stable, bug #382781

  16 Sep 2011; Tony Vroon <chainsaw@gentoo.org>
  xalan-c-1.11.0_pre1153059.ebuild:
  Marked stable on AMD64 based on arch testing by Agostino "ago" Sarubbo & Ian
  "idella4" Delaney in bug #382781.

*xalan-c-1.11.0_pre1153059 (04 Aug 2011)

  04 Aug 2011; Tiziano Müller <dev-zero@gentoo.org>
  +xalan-c-1.11.0_pre1153059.ebuild:
  Version bump, fixes compilation with gcc-4.6 (bug #363531). Also fixed
  compilation with USE=-nls (bug #373035) and use EAPI-4.

  25 Feb 2011; Tiziano Müller <dev-zero@gentoo.org>
  xalan-c-1.11.0_pre797991.ebuild:
  Removed temporary parallel build workaround.

  25 Feb 2011; Tiziano Müller <dev-zero@gentoo.org>
  files/1.11.0_pre797991-parallel-build.patch:
  Update patch to fix parallel build issues (bug #296749, thanks to Martin von
  Gagern and Torsten Kurbad).

  12 Sep 2010; Markos Chandras <hwoarang@gentoo.org>
  xalan-c-1.11.0_pre797991.ebuild:
  Stable on amd64 wrt bug #335745

  06 Sep 2010; Pawel Hajdan jr <phajdan.jr@gentoo.org>
  xalan-c-1.11.0_pre797991.ebuild:
  x86 stable wrt bug #335745

  02 Sep 2010; Andrey Kislyuk <weaver@gentoo.org>
  xalan-c-1.11.0_pre797991.ebuild:
  The latest version is not parallel make safe despite the patch. Adding
  workaround. Feel free to fix properly.

*xalan-c-1.11.0_pre797991 (26 Jul 2009)

  26 Jul 2009; Tiziano Müller <dev-zero@gentoo.org>
  +files/1.11.0_pre797991-as-needed.patch,
  +files/1.11.0_pre797991-bugfixes.patch,
  +files/1.11.0_pre797991-parallel-build.patch,