@@ -1,6 +1,9 @@
 # ChangeLog for dev-libs/xalan-c
-# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/xalan-c/ChangeLog,v 1.31 2011/12/18 17:26:24 armin76 Exp $
+# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/xalan-c/ChangeLog,v 1.32 2012/04/24 10:02:07 mgorny Exp $
+
+  24 Apr 2012; Michał Górny <mgorny@gentoo.org> xalan-c-1.10.0.ebuild:
+  Use mirror:// in SRC_URI.
 
   18 Dec 2011; Raúl Porcel <armin76@gentoo.org> xalan-c-1.10.0.ebuild,
   xalan-c-1.11.0_pre705082.ebuild, xalan-c-1.11.0_pre797991.ebuild,
